@media H1 & fix cards on small devices

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,11 @@
     padding-top: 100px;
   }
 
-
+  @media screen and (max-width: 600px) {
+    .bgimage h1 {
+      font-size: 18px;
+    }
+  }
 .btn {
     
     padding: 15px 25px;
